--- a/project1/project4/style.css
+++ b/project1/project4/style.css
@@ -3,21 +3,48 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+.header_title{
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+.header_decs{
+    max-width: 568px;
+    line-height: 25px;
+    text-align: center;
+    padding-bottom: 40px;
+    margin-left: 450px;
+    
+}
+.main_container{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(4,fr);
+}
+.card_container{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(53, 51, 51);
+    border-radius: 2px;
+}
+.card_image_container{
+    position: relative;
+    overflow: hidden;
+    height: 14rem;
+}
+.card_image{
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
     height: 100%;
     width: 100%;
 }
-.container{
-    max-width: 95vw;
-    padding: 2rem 1rem;
-    margin: 0 auto;
+.card_title_container{
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
 }
-a{
-    text-decoration: none;
-}
-.header_container{
-    margin-bottom: 2.8rem;
-}
-.header_title{
-    text-align: center;
+.card_container:hover .card_image{
+    transform: scale(1.1);
+    transition-duration: 200ms;
 }
