--- a/project1/project22/style.css
+++ b/project1/project22/style.css
@@ -1,42 +1,376 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    height: 100%;
-    width: 100%;
+
+body {
+    font-family: roboto;
+    /* width: 100%; */
+    /* height: 100%; */
+}
+
+nav {
+    background-color: rgb(10, 166, 227);
+    font-size: 20px;
+    color: white;
+    height: 60px;
+    text-align: center;
+    padding-top: 15px;
+    margin-bottom: 25px;
+}
+
+.nav_item {
+    display: flex;
+    justify-content: space-around;
+}
+
+.items {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    margin-left: 100px;
 
 }
-.container{
-    background-color: gray;
-    height: 100vh;
-    width: 100vw;
+
+.items li a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    transition: 0.2s ease-in-out;
+
+}
+
+.items li {
+    list-style: none;
+
+}
+
+.items li a:hover {
+    color: rgb(0, 183, 255);
+}
+
+.heading1 {
+    font-weight: 500;
+    font-size: 30px;
+    /* margin-left: 150px; */
+}
+
+.btn1 {
+    width: 80px;
+    background-color: white;
+    border: 2px solid rgb(135, 129, 129);
+    font-size: 15px;
+    border-radius: 5px;
+    /* margin-right: 250px; */
+}
+
+.btn1:hover {
+    border: none;
+    transition: 0.2s ease-in-out;
+}
+
+.btn2 {
+    width: 80px;
+    background-color: rgb(0, 183, 255);
+    border: none;
+    font-size: 15px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+
+}
+
+.btn2:hover {
+    background-color: blue;
+    color: white;
+    border: none;
+    transition: 0.2s ease-in-out;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    margin-top: 70px;
+    margin-bottom: 80px;
+}
+
+.content {
+    margin-top: 70px;
+}
+
+.heading2 {
+    margin-bottom: 15px;
+    font-size: 45px;
+    margin-left: 100px;
+}
+
+.para1 {
+    margin-bottom: 20px;
+    margin-left: 100px;
+    line-height: 1.5rem;
+    align-items: start;
+
+}
+
+.btn3 {
+    width: 140px;
+    height: 50px;
+    background-color: rgb(0, 183, 255);
+    border: none;
+    font-size: 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+    margin-left: 100px;
+}
+
+.btn3:hover {
+    background-color: blue;
+    color: white;
+    border: none;
+    transition: 0.2s ease-in-out;
+
+}
+
+.main_content p {
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.image-item {
+    display: flex;
+    justify-content: center;
+}
+
+.image-item .image1 {
+    width: 170px;
+    height: 120px;
+    margin-left: 50px;
+}
+
+.image-item .image2 {
+    width: 170px;
+    height: 120px;
+    /* margin-left: 50px; */
+}
+
+.image-item .image3 {
+    width: 170px;
+    height: 120px;
+    margin-left: 50px;
+}
+
+.image-item .image5 {
+    width: 170px;
+    height: 120px;
+    margin-left: 50px;
+}
+
+.image-item .image6 {
+    width: 170px;
+    height: 120px;
+    margin-left: 50px;
+}
+
+.hero {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.heading3 {
+    letter-spacing: 1px;
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+.btn4 {
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: 600;
+    border: 2px solid grey;
+    background-color: rgba(177, 173, 173, 0.411);
+    border-radius: 5px;
+}
+
+.btn4:hover {
+    color: rgb(0, 183, 255);
+    border: 2px solid grey;
+    background-color: white;
+    font-weight: 600;
+    transition: 0.2s ease-in-out;
+}
+
+.card_item img {
+    width: 50px;
+    height: 50px;
+}
+
+.card_section {
     display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(4,1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    /* gap: 20px; */
+    /* column-gap: 30px; */
+    row-gap: 40px;
+    margin-left: 30px;
+    margin-top: 80px;
+
 }
-.item{
-    background-color: chartreuse;
+
+.card_container {
+    text-align: center;
+
 }
-.header{
-    grid-column-start: 1;
-    grid-column-end: 5;
+
+.heading4 {
+    font-size: 25px;
+    margin-bottom: 10px;
 }
-.slidebar{
-    grid-row-start: 2;
-    grid-row-end: 4;
+
+.para2 {
+    max-width: 280px;
+    margin-left: 100px;
+    line-height: 1.5rem;
+    margin-bottom: 10px;
 }
-.content1{
-    grid-column-start: 2;
-    grid-column-end: 5;
+
+.card_item .image_4 {
+    border-radius: 50%;
 }
-.content2{
-    grid-column-start: 2;
-    grid-column-end: 4;
+
+.card_item .image_6 {
+    border-radius: 50%;
 }
-.footer{
-    grid-column-start: 1;
-    grid-column-end: 5;
+
+.main_container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+    margin-left: 80px;
+}
+
+.content-item {
+    margin-top: 120px;
+    /* margin-left: 100px; */
+}
+
+.para3 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.heading5 {
+    font-size: 35px;
+    margin-bottom: 10px;
+}
+
+.para4 {
+    max-width: 550px;
+    line-height: 1.5rem;
+}
+
+.img1 {
+    width: 800px;
+    height: 600px;
+}
+
+.item_container {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.heading6 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+footer {
+    margin-top: 40px;
+    background-color: rgb(44, 2, 84);
+    height: 350px;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.para5 {
+    font-size: 35px;
+    color: white;
+    margin-bottom: 50px;
+    font-weight: 500;
+}
+
+.para6 {
+    font-size: 20px;
+    color: white;
+    margin-bottom: 25px;
+    margin-left: 10px;
+}
+
+.btn5 {
+    width: 120px;
+    height: 40px;
+    background-color: rgb(0, 183, 255);
+    border: none;
+    font-size: 15px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+}
+
+.btn5:hover {
+    background-color: blue;
+    color: white;
+    border: none;
+    transition: 0.2s ease-in-out;
+}
+
+.footer_item {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 70px;
+    height: 250px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.heading7 {
+    font-size: 25px;
+}
+
+.footer_item li a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 2.2rem;
+}
+
+.footer_item ul li {
+    list-style: none;
+}
+
+.footer_item ul {
+    margin-top: 15px;
+
+}
+
+.para7 {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.sub_footer {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    background-color: rgb(85, 150, 175);
+    height: 70px;
+    align-items: center;
 }
